# task-manager

./: .dockerignore  .env  Cargo.toml  DOCKER.md  Dockerfile  Makefile  README.md  RELEASE.md  TESTING.md  api-tests.http  audit.toml  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: ci.yml  release.yml
migrations/: 20260223150457_create_users_and_tasks.sql
src/: db.rs  errors.rs  lib.rs  main.rs
src/handlers/: auth.rs  mod.rs  tasks.rs
src/middleware/: auth.rs
src/models/: task.rs  user.rs
tests/: auth_tests.rs  error_tests.rs  integration_tests.rs  task_model_tests.rs  user_model_tests.rs
